--- a/Themes/Main/Surfhouse/style2.css
+++ b/Themes/Main/Surfhouse/style2.css
@@ -1,4 +1,6 @@
+/*
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i,800,900i|Roboto:400,400i,700,700i&subset=cyrillic');
+*/
 *{
     margin:0;
     padding:0;
