--- a/Themes/Admin/Classic/css/window.css
+++ b/Themes/Admin/Classic/css/window.css
@@ -940,7 +940,7 @@ table{
     margin-bottom: 0;
     box-shadow: inset 0 1px 0 #fff, 0 1px 3px rgba(0, 0, 0, 0.1) !important;
     border-collapse: collapse;
-    
+
 }
 
 table thead {
@@ -971,7 +971,7 @@ tr:nth-child(2n){
     background-color: #ededed;
 }
 
-tr:hover{
+tbody tr:hover{
     background-color: #e2e2e2;
 }
 
