--- a/Themes/Admin/Classic/css/main.css
+++ b/Themes/Admin/Classic/css/main.css
@@ -73,13 +73,13 @@ body{
 #admin-panel .fixed
 {
     position: fixed;
-    padding:0 40px;
+
     z-index:500;
     height:40px;
     width:100%;
     line-height: 40px;
     background: #E5E5E5;
-    border-radius: 5px;
+
     box-shadow:0px 0px 10px 0px rgba(0,0,0,0.5);
     box-sizing: border-box;
 }
@@ -91,44 +91,30 @@ body{
 {
 
 
-    background: -webkit-gradient(linear, 0 50%, 0 100%, from(#efeeef), to(#e0dde0));
-    background: -webkit-linear-gradient(top, #efeeef, #e0dde0);
-    background: -moz-linear-gradient(top, #efeeef, #e0dde0);
-    background: -o-linear-gradient(top, #efeeef, #e0dde0);
-    background: -ms-linear-gradient(top, #efeeef, #e0dde0);
-    background: linear-gradient(to bottom, #efeeef, #e0dde0);
-    border:1px solid #ccc;
 
-    border-left: 1px solid #d1d1d1;
+    height:40px;
+
+
     position: relative;
 
     color: #656268;
 
     text-decoration: none;
-    box-shadow: inset 0 1px 0 #fff, inset -1px 0px 0px 0px rgba(255, 255, 255, 0.4);
+
     text-shadow: 0 1px 0 rgba(255,255,255,0.75);
     padding: 0 15px;
 
     display: inline-block;
-    border-radius: 5px;
 
-    font: bold 14px/30px "Helvetica Neue",Helvetica,Arial,sans-serif;
+
+    font: bold 14px/40px "Helvetica Neue",Helvetica,Arial,sans-serif;
 
 
 
 }
 #admin-panel a.but:hover
 {
-    background: -webkit-gradient(linear, 0 50%, 0 100%, from(rgba(255, 255, 255, 0.65)), to(rgba(255, 255, 255, 0.25)));
-    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.25));
-    background: -moz-linear-gradient(top, rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.25));
-    background: -o-linear-gradient(top, rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.25));
-    background: -ms-linear-gradient(top, rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.25));
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.25));
     color: #4695c4;
-    border-left: 1px solid #d1d1d1;
-
-
 }
 #admin-panel a.but.right
 {
