--- a/Themes/Admin/Classic/css/window.css
+++ b/Themes/Admin/Classic/css/window.css
@@ -55,6 +55,7 @@ body{
 .form2 label
 {
     width:100%;
+    margin-top:10px;
 }
 
 .form2 input[type="checkbox"]
@@ -162,33 +163,97 @@ body{
 }
 .form2 .tabPage
 {
+    /*
     display:none;
     clear: both;
     border:1px solid rgba(0,0,0,0.3);
     background-color: #EAEAEA;
     margin:0;
     padding:10px;
+    box-shadow: inset 0 1px 0 #fff;
+    */
+
+    min-height: 34px;
+    margin-bottom: 0 !important;
+    background: #f7f7f7;
+    border-radius: 5px;
+    border: 1px solid #d1ced3;
+    padding:10px;
+    border-top-color: rgb(209, 206, 211);
+
+    box-shadow: inset 0 1px 0 #fff, 0 1px 3px rgba(0, 0, 0, 0.1) !important;
 }
 
 .form2 .nav li.current
 {
 
-    box-shadow: 0px 1px 0px 0px #FFF inset;
-    background: -moz-linear-gradient(center top , #F9F9F9 5%, #EAEAEA 100%) repeat scroll 0% 0% #F9F9F9;
-    background-color: #EAEAEA;
+    min-height: 36px;
+    margin-bottom: 0 !important;
+    background: #f7f7f7;
+
+
+    border: 1px solid #d1ced3;
+
+    border-top-color: rgb(209, 206, 211);
+
+
+    position: relative;
+    top:2px;
+    border-bottom: 4px solid #f7f7f7;
+    left: 0;
+    z-index: 10;
+
+   /*
+    height: 34px;
+    background: -webkit-gradient(linear, 0 50%, 0 100%, from(#f2f0f2), to(#edeaf0));
+    background: -webkit-linear-gradient(top, #f2f0f2, #edeaf0);
+    background: -moz-linear-gradient(top, #f2f0f2, #edeaf0);
+    background: -o-linear-gradient(top, #f2f0f2, #edeaf0);
+    background: -ms-linear-gradient(top, #f2f0f2, #edeaf0);
+    background: linear-gradient(to bottom, #f2f0f2, #edeaf0);
+    background-color: rgba(0, 0, 0, 0);
+    border-bottom: 1px solid #d4d1d7;
+    box-shadow: inset 0 1px 0 #fff;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    line-height: 14px;
+    float: left;
+    font-size: 14px;
+    color: #656268 !important;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.75);
+    position: relative;
+    cursor: pointer;
+    */
 }
 
 .form2 .nav li
 {
+
+    top:2px;
+    height: 34px;
+    background: linear-gradient(to bottom, #f2f0f2, #edeaf0);
+    line-height: 14px;
+    font-size: 14px;
+    color: #656268 !important;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.75);
+    position: relative;
+    cursor: pointer;
+    padding: 10px 15px;
+    float: left;
+    border:1px solid #ddd;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    margin-left: 10px;
+    /*
     display:block;
-    padding: 5px;
+    padding: 5px 20px;
     border-style: solid;
     border-width: 1px;
     border-color: rgba(0,0,0,0.3);
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     text-decoration: none;
-    width: 170px;
+
     float: left;
     margin: 0;
     margin-right: 3px;
@@ -196,7 +261,7 @@ body{
     cursor:pointer;
     font-size:14px;
     border-bottom:none;
-
+*/
 
 }
 
