--- a/Themes/Admin/Classic/css/window.css
+++ b/Themes/Admin/Classic/css/window.css
@@ -234,7 +234,7 @@ body{
     background: linear-gradient(to bottom, #f2f0f2, #edeaf0);
     line-height: 14px;
     font-size: 14px;
-    color: #656268 !important;
+    color: #656268;
     text-shadow: 0 1px 0 rgba(255,255,255,0.75);
     position: relative;
     cursor: pointer;
@@ -243,7 +243,7 @@ body{
     border:1px solid #ddd;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
-    margin-left: 10px;
+    margin-left: 5px;
     /*
     display:block;
     padding: 5px 20px;
@@ -267,7 +267,7 @@ body{
 
 .form2 .nav li:hover
 {
-    background: #F4F4F4;
+    color:#4695c4;
 
 }
 
