--- a/Themes/Admin/Classic/css/main.css
+++ b/Themes/Admin/Classic/css/main.css
@@ -14,6 +14,7 @@ body{
     background: #E5E5E5;
     border: 1px solid #fff;
     border-radius: 5px 5px 5px 5px;
+    filter: blur(0px);
 
     display:none;
     position: absolute;
@@ -28,6 +29,11 @@ body{
 
 
 }
+#MCMSwindow *{
+
+    filter: blur(0px);
+}
+
 #MCMSwindow iframe
 {
     position: relative;
@@ -57,10 +63,27 @@ body{
 
 #MCMSwindowMask
 {
+    background: url(../images/wild_oliva.png);
+    filter: blur(0px);
     position:absolute;
-    z-index:90000;
-    background-color:#666;
+    z-index:70000;
+    opacity: 0.6;
+    width:100%;
     display:none;
+}
+
+
+body.mcms-openwin  *:not(.tools-bar){
+    filter: blur(5px);
+
+
+
+
+}
+
+body.mcms-openwin{
+    overflow: hidden;
+
 }
 /*
     Меню администратора
@@ -275,7 +298,7 @@ iframe.sendform
 .tools-bar
 {
     position: fixed;
-
+    filter: blur(0px);
     width:32px;
     text-align:center;
 
