--- a/Themes/Admin/Classic/css/window.css
+++ b/Themes/Admin/Classic/css/window.css
@@ -37,12 +37,14 @@ body{
 .form2 input[type='text'], .form2 input[type='password'],  form textarea, .form2 input[type='date']
 {
     border:1px solid #b1bcc5;
+    /*
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
     -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
     -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
     box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
+    */
     vertical-align: middle;
 
     font: 16px  calibrieot, Calibri;
@@ -78,6 +80,12 @@ body{
     width:500px;
     padding:5px;
 }
+.form2 input:focus, select:focus, textarea:focus{
+    border: 1px solid #4695c4;
+    outline: none;
+    
+}
+
 .form2 div input.button
 {
     display:block;
