--- a/Themes/Main/Surfhouse/style.css
+++ b/Themes/Main/Surfhouse/style.css
@@ -39,6 +39,9 @@ section:after{
     box-sizing: border-box;
 
 }
+
+
+
 /************* header *********************/
 
 .wrap.header{
@@ -280,7 +283,9 @@ section:after{
 
     font-size: 16px;
     font-family: Raleway, Arial, Helvetica, sans-serif;
-    color:  #000000;
+    color:
+    #707070;
+    margin-bottom: 20px;
 
 }
 
